<resources>
    <string name="app_name">我的应用</string>
    <string name="theme_text">主题设置</string>
    <string name="skip">跳过</string>
    <string name="permissions">权限</string>
    <string name="intent_callback">Intent回调</string>
    <string name="setting">设置</string>
    <string name="system_style_dialog">系统风格弹窗</string>
    <string name="customization_style_dialog">自定义风格弹窗</string>
    <string name="camera">相机</string>
    <string name="location">位置</string>
    <string name="microphone">麦克风</string>
    <string name="phone_and_contact">电话与联系人</string>
    <string name="send_sms">发送短信</string>
    <string name="callback">回调</string>
    <string name="toast_tips">Toast提示</string>
    <string name="tips">提示</string>
    <string name="title">标题</string>
    <string name="dialog_test">弹窗测试</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="loading">请稍后</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="modify">修改</string>
    <string name="new_nickname_is">新昵称是</string>
    <string name="return_result_is">返回结果是</string>
    <string name="press_again_to_exit_app">再按一次退出应用</string>
    <string name="switch_languages">切换语言</string>
    <string name="chinese_or_english">中/英</string>
    <string name="input_new_nickname">请输入新的昵称</string>
    <string name="seconds">秒</string>
    <string name="title_home">首页</string>
    <string name="title_discovery">发现</string>
    <string name="title_msg">消息</string>
    <string name="title_me">我的</string>
    <string name="exit_login">退出登录</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="modify_user_info">修改信息</string>
    <string name="modify_avatar">修改头像</string>
    <string name="user_login">点击登录</string>
</resources>