<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_username"
            style="@style/MorandiM3EditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="45dp"
            android:hint="@string/input_username"
            app:boxStrokeColor="@color/input_stroke"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="?attr/colorPrimary"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_pwd"
            style="@style/MorandiM3EditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="45dp"
            android:hint="@string/input_password"
            app:boxStrokeColor="@color/input_stroke"
            app:endIconDrawable="@drawable/ic_visibility_selector"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@+id/textlayout_username"
            app:startIconDrawable="@drawable/ic_pwd"
            app:startIconTint="?attr/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/AppButton.Primary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_big_h"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="45dp"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@+id/textlayout_pwd" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="用户注册"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="忘记密码" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>